<resources>
    <string name="app_name"><font size="15">EMARTH</font></string>
    <string name="turn_camera">Turn Camera</string>
    <string name="stop_camera">Stop Camera</string>
    <string name="start_camera">Start Camera</string>
    <string name="logmode_msg">Face detection program is running</string>
    <string name="video_dl_msg">設定画面から動画ファイルをダウンロードしてください</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="page2">page2</string>
    <string name="rb_background">バックグラウンド</string>
    <string name="rb_foreground">顔検知テスト</string>
    <string name="settings_title">設定</string>
    <string name="profile_title">アカウント</string>

    <string name="accountCatTitle">アカウント</string>
    <string name="accountId">ユーザーID</string>
    <string name="accountEmail">Eメール</string>
    <string name="accountName">名前</string>
    <string name="accountPharma">薬局名</string>
    <string name="accountTel">電話番号</string>
    <string name="accountAddress">薬局住所</string>

    <string name="title_string"><font size="15">EM APPLIED RESEARCH &amp; TECHNOLOGY HUB</font></string>
    <string name="TAC">I agree to the Terms and Conditions</string>
    <string name="legal">I agree to the Terms and Conditions</string>
    <string name="password_reset"><u>Password Reset</u></string>
    <string name="SIGN_UP">Registration &amp; Sign-up</string>
    <string name="SIGN_UP_FRONT">SIGN UP</string>
    <string name="Create_Account">Create account</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm password</string>
    <string name="RESET_MY_PASSWORD">RESET MY PASSWORD</string>
    <string name="Enter_email">email@domain.com</string>
    <string name="Enter_email_address">Enter email address</string>
    <string name="powered_by">powered by Em@rth</string>
    <string name="Current_Location">Current GPS Location</string>
    <string name="Get_location">Get Location</string>
    <string name="Upload">Upload</string>
    <string name="File_Upload">Tap to Select File &amp; Press Upload</string>
    <string name="serverClientId">281673539231-pfthpnmvu755bbk3mthb31kqtcbqdvqd.apps.googleusercontent.com</string>

    <string name="videoDynamicPrefTitle">オート・ダウンロード実行日</string>
    <string name="videoDynamicFilePrefTitle">オートDLファイル名</string>
    <string name="videoStaticPrefTitle">ユーザー・ダウンロード実行日</string>
    <string name="videoStaticFilePrefTitle">ユーザDLファイル名</string>
    <string name="dlPrefTitle">動画ダウンロード実行日</string>
    <string name="dlFilePrefTitle">DLファイル名</string>
    <string name="videoCatTitle">動画設定</string>
    <string name="videoPrefTitle1">動画ファイル</string>
    <string name="videoPrefTitle2">動画URL</string>
    <string name="listCatTitle">モード設定</string>
    <string name="listPrefTitle">実行モード</string>
    <string name="list2CatTitle">カメラ</string>
    <string name="list2PrefTitle">カメラ選択</string>
    <string name="logPrefTitle">データ</string>
    <string name="logdataPrefTitle">ログ表示</string>
    <string name="reset">リセット</string>
    <string name="uploadPrefTitle">ログ・DBアップロード</string>
    <string name="locationPrefTitle">ログ用・現在地</string>
    <string name="logout">ログアウト</string>

    <string-array name="list_entries">
        <item>カメラ・テスト</item>
        <item>動画再生（ファイル）</item>
        <item>動画再生（URL）</item>
    </string-array>

    <string-array name="list_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="list2_entries">
        <item>バックカメラ（携帯背面側）</item>
        <item>フロントカメラ（スクリーン側）</item>
    </string-array>

    <string-array name="list2_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="title_activity_profile">ProfileActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>

