<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.FaceDetection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainpage"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context=".authentication.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edittext"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_page"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextEmailSignin"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/icon_email"
                android:drawablePadding="8dp"
                android:hint="@string/Enter_email_address"
                android:padding="8dp"
                android:textColor="@color/black"
                android:importantForAutofill="no"/>

            <EditText
                android:id="@+id/editTextPasswordSignin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/icon_lock"
                android:drawablePadding="8dp"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:importantForAutofill="no"/>

            <Button
                android:id="@+id/buttonSignin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/purple"
                android:text="@string/Login"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/buttonSignup"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/purple"
                android:text="@string/SIGN_UP_FRONT"
                android:textSize="16sp"
                app:cornerRadius="20dp" />

            <CheckBox
                android:id="@+id/termsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TAC" />

            <Button
                android:id="@+id/buttonForgot"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="3dp"
                android:background="@null"
                android:backgroundTint="@color/white"
                android:text="@string/password_reset"
                android:textColor="#373535"
                android:textSize="14sp"
                app:cornerRadius="20dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>