<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.FaceDetection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:background="@color/gofuniro"
    tools:context=".authentication.SignupActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edittext"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SIGN_UP"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextEmailSignup"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/icon_email"
                android:drawablePadding="8dp"
                android:hint="@string/Enter_email"
                android:padding="8dp"
                android:textColor="@color/black"
                android:importantForAutofill="no"/>

            <EditText
                android:id="@+id/editTextPasswordSignup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/icon_lock"
                android:drawablePadding="8dp"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:importantForAutofill="no"/>

            <!-- for registration -->
            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="Your Name" />

            <EditText
                android:id="@+id/editTextFirmName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Pharmacy Name" />

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone Number" />

            <EditText
                android:id="@+id/editTextOfficeAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Pharmacy Address" />

            <Button
                android:id="@+id/buttonSignupUser"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple"
                android:text="@string/Create_Account"
                android:textSize="16sp"
                app:cornerRadius="20dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>