<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewCameraPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:scaleType="fillCenter">
    </androidx.camera.view.PreviewView>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <VideoView
            android:id="@+id/videoView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <WebView
        android:id="@+id/webView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="H,16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/counter_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:scrollbars="vertical"
            android:text=""
            android:textSize="14sp" />
    </ScrollView>


    <com.example.facedetection.graphic.GraphicOverlay
        android:id="@+id/viewGraphicOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <FrameLayout
        android:id="@+id/buttonControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonStopCamera"
            style="?attr/floatingActionButtonSmallStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="20dp"
            android:contentDescription="@string/stop_camera"
            android:src="@drawable/icon_stop" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonChangePage"
            style="?attr/floatingActionButtonSmallStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_margin="20dp"
            android:contentDescription="@string/page2"
            android:src="@drawable/icon_settings" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonStartCamera"
            style="?attr/floatingActionButtonSmallStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="20dp"
            android:contentDescription="@string/start_camera"
            android:src="@drawable/icon_start"
            android:visibility="invisible" />

    </FrameLayout>

</FrameLayout>